// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders accepted, rejected, and delete buttons 1`] = `
<div>
  <ul
    className="form-actions -inline"
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <li>
      <Component
        label="accept"
        setStatus={[Function]}
        status="pending"
        type="accepted"
      />
    </li>
    <li>
      <Component
        label="reject"
        setStatus={[Function]}
        status="pending"
        type="rejected"
      />
    </li>
  </ul>
  <ul
    className="form-actions -inline"
  >
    <li>
      <button
        className="button delete -tertiary"
        onClick={[Function]}
      >
        Delete
      </button>
    </li>
  </ul>
</div>
`;

exports[`it renders the review block with tags 1`] = `
<div>
  <ul
    className="form-actions -inline"
    style={
      Object {
        "marginTop": 0,
      }
    }
  >
    <li>
      <Component
        label="accept"
        setStatus={[Function]}
        status="accepted"
        type="accepted"
      />
    </li>
    <li>
      <Component
        label="reject"
        setStatus={[Function]}
        status="accepted"
        type="rejected"
      />
    </li>
  </ul>
  <ul
    className="form-actions -inline"
  >
    <li>
      <button
        className="button delete -tertiary"
        onClick={[Function]}
      >
        Delete
      </button>
    </li>
  </ul>
  <Tags />
</div>
`;
